# sonic-o1

./: .gitignore  .placeholder  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_venv.txt
docs/: index.html  main.js  style.css
sonic-o1/: README.md
sonic-o1/01_data_curation/: README.md  config.yaml  parse_topic.py  youtube_metadata_scraper.py
sonic-o1/02_caption_generation/: README.md  config_whisper.yaml  whisper_captionGen.py
sonic-o1/03_demographics_annotation/: README.md  config.yaml  config_loader.py  model.py  prompts.py  run_annotation.py
sonic-o1/04_vqa_generation/: README.md  check_failed_summary.py  fill_empty_demographics.py  main.py  standardize_demographics.py
sonic-o1/04_vqa_generation/config/: vqa_config.yaml
sonic-o1/04_vqa_generation/models/: __init__.py  base_gemini.py  mcq_model.py  summarization_model.py  temporal_localization_model.py  temporal_question_judge.py
sonic-o1/04_vqa_generation/prompts/: mcq_prompts.py  summarization_prompts.py  temporal_judge_prompts.py  temporal_localization_prompts.py
sonic-o1/04_vqa_generation/utils/: demographics_expander.py  frame_sampler.py  video_segmenter.py
sonic-o1/05_evaluation_inference/: README.md  run_evaluation.py
sonic-o1/05_evaluation_inference/configs/: __init__.py  models_config.yaml
sonic-o1/05_evaluation_inference/external_repos/: README.md
sonic-o1/05_evaluation_inference/inference/: __init__.py  run_inference.py
sonic-o1/05_evaluation_inference/metrics/: __init__.py  compute_metrics.py  llm_judge_gpt.py  llm_judge_qwen.py  t1_metrics.py  t2_metrics.py  t3_metrics.py
sonic-o1/05_evaluation_inference/models/: __init__.py  backup_singleGPU_unimoe.txt  backup_transformer_qwen3.txt  base_model.py  gemini.py  gpt4o.py  minicpm.py  phi4.py  qwen3.py  unimoe.py  videollama.py  vita.py
sonic-o1/05_evaluation_inference/models_requirements/: requirements_venv_internvideo.txt
sonic-o1/05_evaluation_inference/prompts/: __init__.py  t1_prompts.py  t2_prompts.py  t3_prompts.py
sonic-o1/05_evaluation_inference/results/failed_logs/gemini/: failed_20251202_205500.json  failed_20251202_205627.json  failed_20251202_232250.json  failed_20251203_151748.json  failed_20251206_141331.json  failed_20251208_224524.json  failed_20251209_214438.json  failed_20251211_073543.json  failed_20251211_210407.json  failed_20251212_103523.json  failed_20251214_031916.json  failed_20251215_154614.json  failed_20251216_014913.json  failed_20251216_113530.json  failed_20251219_164113.json  failed_20251220_174502.json  failed_20251223_010455.json  failed_20251223_231019.json  failed_20251225_063837.json  failed_20251226_034524.json  failed_20251226_221045.json  failed_20251227_095439.json  failed_20251227_174916.json  failed_20251227_184015.json
sonic-o1/05_evaluation_inference/results/failed_logs/gpt4o/: failed_20260103_014909.json
sonic-o1/05_evaluation_inference/results/failed_logs/minicpm-o-2.6/: failed_20251209_134407.json  failed_20251210_162643.json  failed_20251210_163406.json  failed_20251211_102401.json  failed_20251211_110539.json  failed_20251211_110710.json  failed_20251211_231141.json  failed_20251212_012244.json  failed_20251212_055728.json  failed_20251212_095828.json  failed_20251212_103300.json  failed_20251212_172207.json  failed_20251212_185026.json  failed_20251212_200040.json  failed_20251212_202447.json  failed_20251213_000105.json  (+15 more)
sonic-o1/05_evaluation_inference/utils/: __init__.py  audio_processor.py  caption_handler.py  config_loader.py  frame_sampler.py  mm_process_pyav.py  segmenter.py
sonic-o1/demographics_annotation/: test_single_video.py
sonic-o1/evaluation_inference/external_repos/: README.md
sonic-o1/evaluation_inference/inference/: run_inference.py
sonic-o1/evaluation_inference/models/: backup_vllm_qwen3.txt
sonic-o1/huggingface_review_template/: VQA_skimReview.py  caption_app.py  demographicsDetailsReview_app.py  final_app.py  initial_app.py
sonic-o1/optionalFiles/: analyze_enhancedDemographics.py  analyze_selectedVideos.py  compare_vqaToBackup.py  drop_orphaned_vids.py  drop_video_capQuality.py  extend_metadata.py  find_missing_entries.py  fix_confidence.py  replace_bad_videos.py  replace_video_capQuality.py  segment_visualizer.py  videos_samples_analysis.py  whisper_test.py
sonic-o1/optionalFiles/DemographicsAnalysis/: demographics_detailed_by_topic.csv  duration_by_topic.csv  overall_demographics_distribution.csv  summary_statistics.csv
sonic-o1/optionalFiles/VideoAudioDemographicsAnalysis/: complete_summary.csv  demographics_by_topic.csv  demographics_percentages.csv  duration_by_topic.csv
sonic-o1/vqa/task1_summarization/: 01_Patient-Doctor_Consultations.json  02_Job_Interviews.json  03_Parent-Teacher_Conferences.json  04_Customer_Service_Interactions.json  05_Courtroom_Proceedings.json  06_Emergency_Response_Scenarios.json  07_Public_Transportation_Conflicts.json  08_Workplace_Team_Meetings.json  09_HousingApartment_Tours.json  10_Restaurant_Service_Encounters.json  11_Mental_Health_Counseling.json  12_Community_Town_Halls.json  13_Olympics.json
sonic-o1/vqa/task2_mcq/: 01_Patient-Doctor_Consultations.json  02_Job_Interviews.json  03_Parent-Teacher_Conferences.json  04_Customer_Service_Interactions.json  05_Courtroom_Proceedings.json  06_Emergency_Response_Scenarios.json  07_Public_Transportation_Conflicts.json  08_Workplace_Team_Meetings.json  09_HousingApartment_Tours.json  10_Restaurant_Service_Encounters.json  11_Mental_Health_Counseling.json  12_Community_Town_Halls.json  13_Olympics.json
sonic-o1/vqa/task3_temporal_localization/: 01_Patient-Doctor_Consultations.json  02_Job_Interviews.json  03_Parent-Teacher_Conferences.json  04_Customer_Service_Interactions.json  05_Courtroom_Proceedings.json  06_Emergency_Response_Scenarios.json  07_Public_Transportation_Conflicts.json  08_Workplace_Team_Meetings.json  09_HousingApartment_Tours.json  10_Restaurant_Service_Encounters.json  11_Mental_Health_Counseling.json  12_Community_Town_Halls.json  13_Olympics.json
sonic-o1/vqa_generation/: check_empty_demographics.py
(+1520 files in other folders)
